# Comparison_between_two_ways_to_solve_MIN_VERTEX_COVER

./: CMakeLists.txt  README.md  pthread.cpp
